Cambios en la descarga

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_home"
@@ -9,13 +9,29 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     tools:context="com.limox.jesus.Control_chargerimagenbutton.HomeActivity">
-
+<LinearLayout
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
     <com.limox.jesus.Control_chargerimagenbutton.ChargerImagenButton
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/eso"
         app:text="@string/click_to_load"
-        app:url_imagen="http://68.media.tumblr.com/avatar_18eba80b7615_128.png"/>
-
-</RelativeLayout>
+        app:url_imagen="http://www.wearemoviegeeks.com/wp-content/uploads/SSS-1.jpg"/>
+    <com.limox.jesus.Control_chargerimagenbutton.ChargerImagenButton
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/eso2"
+        app:text="@string/click_to_load"
+        app:url_imagen="https://i.ytimg.com/vi/Au_e-byGcSc/maxresdefault.jpg"/>
+    <com.limox.jesus.Control_chargerimagenbutton.ChargerImagenButton
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/eso3"
+        app:text="@string/click_to_load"
+        app:url_imagen="https://i.ytimg.com/vi/KXBKxx2b-rE/maxresdefault.jpg"/>
+</LinearLayout>
+</ScrollView>
