--- a/app/src/main/res/layout/chargerimagenbutton.xml
+++ b/app/src/main/res/layout/chargerimagenbutton.xml
@@ -5,7 +5,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/click_to_load"
-        android:id="@+id/button1"/>
+        android:id="@+id/button1"
+        android:backgroundTint="@android:color/black"
+        android:textColor="@android:color/white"
+        android:textStyle="bold"/>
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
