--- a/app/src/main/res/layout/chargerimagenbutton.xml
+++ b/app/src/main/res/layout/chargerimagenbutton.xml
@@ -12,5 +12,7 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:scaleType="fitStart"
+        android:adjustViewBounds="true"
         android:id="@+id/imageview1"/>
 </merge>
